--- a/app/views/tops/index.html.erb
+++ b/app/views/tops/index.html.erb
@@ -1,7 +1,7 @@
 <div class="jumbotron">
   <div class="container">
     <nav class="navbar navbar-light">
-      <a class="navbar-brand text-white test">Techpit Match</a>
+      <a class="navbar-brand text-white test">encounter</a>
       <div class="navbar__sign-in-btn">
         <%= link_to "ログイン", new_user_session_path, class: "btn my-2 my-sm-0 bg-light text-top-color" %>
       </div>
@@ -9,7 +9,7 @@
   </div>
 
   <div class="top-title">
-    <h1 class="text-white text-center">
+    <h1 class="text-white text-center ">
       Swipe Right
     </h1>
   </div>
