--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -7,13 +7,13 @@
 
   <div class="profile">
     <img id="profile-img-prev" src="#" class='hidden' />
-    <% if @user.profile_image.url.nil? %>
+    <% if @user.image.url.nil? %>
     <div class="profile-default-img"></div>
     <% else %>
-    <%= image_tag @user.profile_image.url, class: "profile-img", id: "profile-img" %>
+    <%= image_tag @user.image.url, class: "profile-img", id: "profile-img" %>
     <% end %>
     <label class="profile-img-upload">
-      <%= f.file_field :profile_image, id: "profile_image_upload" %>ファイルを選択
+      <%= f.file_field :image, id: "image_upload" %>ファイルを選択
     </label>
   </div>
 
